--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-      window.location.href = `${window.location.href}/src/Raccoon/home.html`
+      window.location.href = !window.location.href.includes("index.html") ? `${window.location.href}src/Raccoon/home.html`: `${window.location.href.replace('index.html','src/Raccoon/home.html' )}`
 </script>
