--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -10,6 +10,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <script src="./scripts/generateDummyData.js"></script>
     <script type="module" src="./scripts/utils.js" ></script>
     <script type="module" src="./scripts/vaga.js" ></script>
@@ -109,8 +111,25 @@
                 </div>
                 <div>
                     <!--COMO SE CANDIDATAR-->
-                    <h5 class="background mt-5">COMO SE CANDIDATAR</h5>
-                    <div class="p-3 bg-light">
+                    <div class="card container mt-5">
+                        <form id="candidatarForm" method="POST">
+                            <h5 class="background text-center my-2">COMO SE CANDIDATAR</h5>
+                            <div class="my-2">
+                                <input type="text" required id="mensagem" class="form-control" placeholder="Adicione uma mensagem para seu empregador se desejar">
+                            </div>
+                            <div class="custom-file my-2">
+                                <input type="file" required class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Adicione seu curriculo no .pdf ou .docx</label>
+                            </div>
+                            <div class="text-right my-2">
+                                <button type="submit" id="candidatar" class="btn btn-primary btn-sm">Enviar Curriculo</button>
+                            </div>
+                            <small class="text-muted">Obs: O que foi escrito em "Adicione uma mensagem" será enviado aos desenvolvedores, porém, o arquivo não.</small>
+                        </form>
+                    </div>
+                    <!--CONTATO-->
+                    <div class="p-3 bg-light mt-4">
+                        <h5 class="mt-2 mb-4">CONTATOS DA EMPRESA</h5>
                         <div class="row">
                             <div class="col-sm-6 col-md-6 col-lg-2">
                                 <a class="navbar-brand mt-2 mt-lg-0" href="#">
