--- a/src/Raccoon/vaga.html
+++ b/src/Raccoon/vaga.html
@@ -118,7 +118,7 @@
                                 <input type="text" required id="mensagem" class="form-control" placeholder="Adicione uma mensagem para seu empregador se desejar">
                             </div>
                             <div class="custom-file my-2">
-                                <input type="file" required class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
+                                <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01">
                                 <label class="custom-file-label" for="inputGroupFile01">Adicione seu curriculo no .pdf ou .docx</label>
                             </div>
                             <div class="text-right my-2">
