--- a/src/Raccoon/resumo.html
+++ b/src/Raccoon/resumo.html
@@ -48,19 +48,16 @@
                         <div class="row">
                             <div class="col-sm-10 mx-auto">
                                 <div class="p-2 bg-light shadow rounded">
-                                    <div class="carousel slide row justify-content-center"
-                                        id="carouselExampleIndicators" data-ride="carousel">
+                                    <div class="carousel slide row justify-content-center" id="carouselExampleIndicators" data-ride="carousel">
                                         <ol class="carousel-indicators mb-0">
-                                            <li class="active" data-target="#carouselExampleIndicators"
-                                                data-slide-to="0"></li>
+                                            <li class="active" data-target="#carouselExampleIndicators" data-slide-to="0"></li>
                                             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                                             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
                                         </ol>
                                         <div class="carousel-inner pb-4 col-sm-8">
                                             <div class="carousel-item active">
                                                 <div class="media">
-                                                    <img class="rounded-circle img-thumbnail" src="../img/raccoon.svg"
-                                                        alt="" width="100">
+                                                    <img class="rounded-circle img-thumbnail" src="../img/raccoon.svg" alt="" width="100">
                                                     <div class="media-body ml-3">
                                                         <blockquote class="blockquote border-0 p-0">
                                                             <p>
@@ -75,12 +72,11 @@
                                             </div>
                                             <div class="carousel-item">
                                                 <div class="media">
-                                                    <img class="rounded-circle img-thumbnail" src="../img/raccoon.svg"
-                                                        alt="" width="100">
+                                                    <img class="rounded-circle img-thumbnail" src="../img/raccoon.svg" alt="" width="100">
                                                     <div class="media-body ml-3">
                                                         <blockquote class="blockquote border-0 p-0">
                                                             <p>
-                                                                <strong>Como implementar testes de impactto
+                                                                <strong>Como implementar testes de impacto
                                                                     eficazes?</strong>
                                                             </p>
                                                             <p>Por: Raccoon Jobs</p>
@@ -91,8 +87,7 @@
                                             </div>
                                             <div class="carousel-item">
                                                 <div class="media">
-                                                    <img class="rounded-circle img-thumbnail" src="../img/raccoon.svg"
-                                                        alt="" width="100">
+                                                    <img class="rounded-circle img-thumbnail" src="../img/raccoon.svg" alt="" width="100">
                                                     <div class="media-body ml-3">
                                                         <blockquote class="blockquote border-0 p-0">
                                                             <p>
@@ -106,13 +101,11 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <a class="carousel-control-prev bg-dark col-sm-1"
-                                            href="#carouselExampleIndicators" role="button" data-slide="prev">
+                                        <a class="carousel-control-prev bg-dark col-sm-1" href="#carouselExampleIndicators" role="button" data-slide="prev">
                                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                             <span class="sr-only">Previous</span>
                                         </a>
-                                        <a class="carousel-control-next bg-dark col-sm-1"
-                                            href="#carouselExampleIndicators" role="button" data-slide="next">
+                                        <a class="carousel-control-next bg-dark col-sm-1" href="#carouselExampleIndicators" role="button" data-slide="next">
                                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                             <span class="sr-only">Next</span>
                                         </a>
